fix popover being hidden by overflow hidden

--- a/app/assets/stylesheets/bootswatch_overrides.css.scss
+++ b/app/assets/stylesheets/bootswatch_overrides.css.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .centered-content {
